--- a/more.html
+++ b/more.html
@@ -7,6 +7,7 @@
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.11.2/css/all.css"
     />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>More | Kakao Clone</title>
   </head>
   <body>
@@ -18,11 +19,11 @@
         <i class="fas fa-clock"></i>
         <i class="fas fa-volume-mute"></i>
         <i class="fas fa-wifi"></i>
-        <span class="status-bar__batter-level">100%</span>
+        <span class="status-bar__battery-level">100%</span>
         <i class="fas fa-battery-full"></i>
       </div>
     </div>
-    <header clas="header">
+    <header class="header">
       <div class="header__header-column">
         <h1 class="header__title">More</h1>
       </div>
@@ -41,9 +42,9 @@
       </div>
     </header>
     <main class="more">
-      <header class="header more__header">
+      <header class="more__header">
         <div class="friends__friend friend friend--lg">
-          <div class="friend_column">
+          <div class="friend__column">
             <img src="images/avatar.jpg" class="g-avatar friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
@@ -58,28 +59,29 @@
             <i class="far fa-comment-alt fa-2x"></i>
           </div>
         </div>
+
         <ul class="more__btn-list">
           <li class="more__btn">
             <span class="more__btn-icon">
               <i class="far fa-smile fa-2x"></i>
             </span>
-            <span class="more__btntitle">Emoticons </span>
+            <span class="more__btn-title">Emoticons </span>
           </li>
           <li class="more__btn">
             <span class="more__btn-icon">
               <i class="fas fa-brush fa-2x"></i>
             </span>
-            <span class="more__btntitle">Themes </span>
+            <span class="more__btn-title">Themes </span>
           </li>
           <li class="more__btn">
             <span class="more__btn-icon">
               <i class="fab fa-kickstarter-k fa-2x"></i>
             </span>
-            <span class="more__btntitle">Account </span>
+            <span class="more__btn-title">Account </span>
           </li>
         </ul>
       </header>
-      <section class="more__suggetions">
+      <section class="more__suggestions">
         <h5 class="more__title">Suggestions</h5>
         <ul class="more__suggestions-list">
           <li class="more__suggestion suggestion">
@@ -127,5 +129,8 @@
         </li>
       </ul>
     </nav>
+    <div class="bigScreen">
+      <span class="bigScreen__text">Please make your screen small!</span>
+    </div>
   </body>
 </html>
