--- a/friends.html
+++ b/friends.html
@@ -7,6 +7,7 @@
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.11.2/css/all.css"
     />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Friends | Kakao Clone</title>
   </head>
   <body>
@@ -18,11 +19,11 @@
         <i class="fas fa-clock"></i>
         <i class="fas fa-volume-mute"></i>
         <i class="fas fa-wifi"></i>
-        <span class="status-bar__batter-level">100%</span>
+        <span class="status-bar__battery-level">100%</span>
         <i class="fas fa-battery-full"></i>
       </div>
     </div>
-    <header clas="header">
+    <header class="header">
       <div class="header__header-column">
         <h1 class="header__title">Friends</h1>
       </div>
@@ -55,7 +56,7 @@
         <h5 class="friends__plus-title">Plus friend</h5>
         <div class="friends__friend friend">
           <div class="friend__column">
-            <img src="images/avatar.jpg" class="g-avatar friend__avatar" />
+            <img src="images/avatar.jpg" class="friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
                 Plus Friend
@@ -67,24 +68,26 @@
       <ul class="friends__list">
         <h5 class="friends__title">Friends 14</h5>
         <li class="friends__friend friend friend--lg">
-          <div class="friend_column">
-            <img src="images/avatar.jpg" class="g-avatar friend__avatar" />
+          <div class="friend__column">
+            <img src="images/avatar.jpg" class="friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
-                Jongmin
+                Alina
               </span>
               <span class="friend__status">
-                jongminative
+                Animo!
               </span>
             </div>
           </div>
           <div class="friend__column">
+            <div class="friend__now-listening">
+              <span
+                >FTIsland (FT. Jongmin)
+                <i class="fas fa-play"></i>
+              </span>
+            </div>
+          </div>
         </li>
-        <div class="friend__now-listening">
-          <span>FTIsland (FT) </span>
-          <i class="fas fa-play"></i>
-        </div>
-    </div>
       </ul>
     </main>
     <nav class="nav">
@@ -96,6 +99,7 @@
         </li>
         <li class="nav__list-item">
           <a href="index.html" class="nav__list-link">
+            <div class="nav__badge">8</div>
             <i class="far fa-comment"></i>
           </a>
         </li>
@@ -111,5 +115,8 @@
         </li>
       </ul>
     </nav>
+    <div class="bigScreen">
+      <span class="bigScreen__text">Please make your screen small!</span>
+    </div>
   </body>
 </html>
